--- a/competences/index.html
+++ b/competences/index.html
@@ -292,7 +292,7 @@ body, .widget-area .widget, .widget-area .widget a, .site-footer, .site-footer a
 					<div class="elementor-widget-wrap">
 				<div data-id="9266636" class="elementor-element elementor-element-9266636 elementor-widget elementor-widget-text-editor" data-element_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><em>A travers les différents projets informatiques scolaires que j&#8217;ai réalisés, j&#8217;ai eu à plusieurs le rôle de chef de projet. Par conséquent, j&#8217;ai pu développer la capacité de gérer une équipe ainsi que le projet en lui-même et cela m&#8217;a beaucoup plu.</em></span></p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p><span style="color: #000000;"><em>A travers les différents projets informatiques scolaires que j&#8217;ai réalisés, j&#8217;ai eu à plusieurs reprise le rôle de chef de projet. Par conséquent, j&#8217;ai pu développer la capacité de gérer une équipe ainsi que le projet en lui-même et cela m&#8217;a beaucoup plu.</em></span></p></div>
 				</div>
 				</div>
 						</div>
